--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-multi-carousel": "^2.8.5",
+    "react-spinners": "^0.13.8",
+    "swr": "^2.2.5",
+    "timeago.js": "^4.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
