--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@sanity/image-url": "^1.0.2",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
+    "next-sanity": "^9.3.10",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
